Agregado respuestas a la sección de vectores, impresion de cantidad de palabras que tienen y no tienen vectores asociado y aumento en muestreo de palabras sin vector asociado

--- a/lab2/IntroPLN2018_lab_entrega2.ipynb
+++ b/lab2/IntroPLN2018_lab_entrega2.ipynb
@@ -234,7 +234,24 @@
     "pares_estudiante = [\n",
     "    ('bodka', 'vodka'),\n",
     "    ('manuela', 'marea'),\n",
-    "    ('aaaaaaaaaaa', 'bbbbbbbbbbbbbbbbb')\n",
+    "    ('salado', 'dulce'),\n",
+    "    ('rico', 'sabroso'),\n",
+    "    ('agua', 'salada'),\n",
+    "    ('postre', 'dulce'),\n",
+    "    ('ambiente', 'agradable'),\n",
+    "    ('tecnologia', 'idem'),\n",
+    "    ('pista', 'carreras'),\n",
+    "    ('administración', 'empresas'),\n",
+    "    ('anterior', 'posterior'),\n",
+    "    ('buenos', 'aires'),\n",
+    "    ('francia', 'españa'),\n",
+    "    ('francia', 'espana'),\n",
+    "    ('france', 'spain'),\n",
+    "    ('alejandro', 'magno'),\n",
+    "    ('año', 'nuevo'),\n",
+    "    ('caño', 'caños'),\n",
+    "    ('el', 'la'),\n",
+    "    ('eso', 'esa'),\n",
     "] \n",
     "\n",
     "for pair in pares_estudiante:\n",
@@ -251,9 +268,13 @@
     "\n",
     "**Respuesta:**\n",
     "\n",
-    "COMPLETAR CON LA RESPUESTA\n",
+    "Para analizar los resultados obtenidos debemos tener en cuenta el funcionamiento del modelo skip-gram. Dicho modelo obtiene los vectores al entrenar una red neuronal que tiene como entrada un vector 'one-hot' (esto es, un vector de largo _n = cantidad de tokens en el corpus_ y con valor 1 en la posición que corresponde a la palabra ingresada y 0 en los demás valores) que representa una palabra, devolviendo como salida un vector de probabilidades de que cada palabra del corpus de entrenamiento se encuentre en el contexto de la palabra ingresada (o sea, en su proximidad). Luego, los vectores se obtienen de la matriz resultante en la capa oculta de la red. Este modelo es forma parte del conjunto de modelos _word2vec_.\n",
+    "De este modelo se deriva que la distancia entre dos palabras en su representación vectorial nos permite obtener una medida de si una de ellas aparece en el mismo contexto que la otra en nuestro corpus de entrenamiento.\n",
     "\n",
-    "."
+    "Es así que podemos observar, por ejemplo, que las palabras 'bueno' y 'malo' aparecen en el mismo contexto varias veces ya que tienen un valor de similitud alto. Lo mismo ocurre con palabras como 'frío' y 'calor', 'francia' y 'españa' mientras que palabras como 'manuela' y 'marea' no aparecen prácticamente nunca en el mismo contexto. Las palabras 'buenos' y 'aires' son de las que mayor valor de similitud tienen, ya que suelen aparecer juntas conformando un nombre propio. Parece ser que no se hizo en este caso, pero en [1] recomiendan tratar este tipo de \"frases\" como una palabra en sí, manteniendo separado el significado de las palabras cuando se encuentran aparte de cuando se encuentran juntas.\n",
+    "También podemos ver que pronombres con el mismo significado pero que varían en género tienen una similitud muy alta.\n",
+    "\n",
+    "Por último, cabe destacar ciertos casos en los que podría suceder que intuitivamente se piense que la similitud debería rondar cierto valor (a nuestro juicio), pero que no resulta así. Tales son los casos como 'francia' y 'espana' (esta última es escrita así cuando el escritor tiene un teclado en inglés), 'pista' y 'carreras' o 'rico' y 'sabroso'. Estos casos pueden suceder porque no ocurrían en el mismo contexto lo suficiente como para impactar en el valor de similitud. Otro causante de esto es que la ventana de contexto utilizada (esto es, cuantas palabras se consideran hacia la derecha y hacia la izquierda de la palabra objetivo) no tenga un tamaño suficiente para recoger ciertas palabras en el contexto de la palabra objetivo, o también que la ventana no sea simétrica (por ejemplo, considera 8 palabras antes de la objetivo y 2 palabras luego de la misma). "
    ]
   },
   {
@@ -311,10 +332,13 @@
     "    except KeyError:\n",
     "        hasVectorNot.add(word)\n",
     "    hasVector.add(word)\n",
+    "    \n",
+    "print(\"Cantidad de palabras que tienen un vector asociado: {}\".format(len(hasVector)))\n",
+    "print(\"Cantidad de palabras que NO tienen un vector asociado: {}\\n\".format(len(hasVectorNot)))\n",
     "\n",
     "for word in enumerate(list(hasVectorNot)):\n",
     "    print(word[1])\n",
-    "    if (word[0] == 20): break;\n",
+    "    if (word[0] == 40): break;\n",
     "    \n"
    ]
   },
@@ -327,10 +351,10 @@
     "\n",
     "**Respuesta:**\n",
     "\n",
-    "COMPLETAR CON LA RESPUESTA\n",
+    "Las 20 palabras impresas son en su mayoría palabras que tienen errores ortográficos o \"typos\" (abreviatura de _typographical error_ en español \"error tipográfico\"). Otras palabras que también aparecen en el muestreo son emoticones (:$), algunas puntuaciones \"extrañas\" ('...!', ',,,,' y '!!....') y palabras que son escritas haciendo énfasis en algun aspecto (como 'leeeejos' o 'cristianooooo') , como también algunas que, aunque no son tan raras, simplemente pueden no aparecen en el corpus de entrenamiento (como 'defruadaron' o 'porcioncitas') o son contracciones de una palabra con otra (como 'reamable' 0 'superfresaca'). También aparece una palabra que es una castellanización de otro idioma (como 'harumaki').\n",
     "\n",
-    "\n",
-    "."
+    "Esto es un suceso común, ya que los comentarios son escritos por personas de todo estrato social y edad, lo que lleva a que se encuentren palabras con faltas ortográficas o \"raras\". Además, es común que varias letras se intercambien por otras cuando se escribe en el teclado (\"typo\").\n",
+    "También se debe considerar que los lenguajes se encuentran en constante evolución, y que dependiendo de los diferentes tiempos de donde se comparen texto, se pueden encontrar palabras que no existían en el espacio temporal de uno pero si en otro."
    ]
   },
   {
