agrega implementacion de centroides

--- a/lab2/IntroPLN2018_lab_entrega2.ipynb
+++ b/lab2/IntroPLN2018_lab_entrega2.ipynb
@@ -506,8 +506,9 @@
    "outputs": [],
    "source": [
     "def txt2vec(vectores, comentario):\n",
-    "    pass\n",
-    "            "
+    "    palabras_comentario = nltk.wordpunct_tokenize(comentario.lower())\n",
+    "    vectores_comentario = [getVector(vectores, word) for word in words]\n",
+    "    return np.average(vectores_comentario)            "
    ]
   },
   {
@@ -524,8 +525,8 @@
    "outputs": [],
    "source": [
     "def data2Xy_vec(vec, data):\n",
-    "    X = ...\n",
-    "    y = ...\n",
+    "    X = [txt2vec(vec, comentario) for (comentario, etiqueta) in data]\n",
+    "    y = [etiqueta for (comentario, etiqueta) in data]\n",
     "    return X, y\n",
     "    "
    ]
@@ -543,11 +544,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for c1,c2 in lista_comentarios:\n",
-    "    pass\n",
-    "    # ...\n",
+    "def similitud_centroides(c1, c2):\n",
+    "    centroides_palabras_c1 = data2Xy_vec(vectors, c1)\n",
+    "    centroides_palabras_c2 = data2Xy_vec(vectors, c2)\n",
+    "    similarity(centroides_palabras_c1, centroides_palabras_c2)\n",
     "\n",
-    "# COMPLETAR\n"
+    "for c1,c2 in lista_comentarios:\n",
+    "    print(c1, c2, similitud_centroides(c1, c2))\n",
+    "\n",
+    "for c1,c2 in lista_comentarios_estudiantes:\n",
+    "    print(c1, c2, similitud_centroides(c1, c2))\n"
    ]
   },
   {
