agrega clasificadores usando centroides y calculo de medidas

--- a/lab2/IntroPLN2018_lab_entrega2.ipynb
+++ b/lab2/IntroPLN2018_lab_entrega2.ipynb
@@ -169,6 +169,8 @@
     "with open('./vectores/sgns_spvectors_300.txt', 'r') as f:\n",
     "    words = f.read().splitlines()\n",
     "\n",
+    "_, totalColumnsVectors = vectors.shape\n",
+    "\n",
     "numToWord = dict(list(enumerate(words)))\n",
     "wordToNum = {v: k for k, v in numToWord.items()}\n",
     "\n",
@@ -176,7 +178,7 @@
     "    try:\n",
     "        vec = vectors[wordToNum[word]]\n",
     "    except KeyError:\n",
-    "        return [0 for _ in range(300)]\n",
+    "        return [0 for _ in range(totalColumnsVectors)]\n",
     "    return vec"
    ]
   },
@@ -506,9 +508,13 @@
    "outputs": [],
    "source": [
     "def txt2vec(vectores, comentario):\n",
-    "    palabras_comentario = nltk.wordpunct_tokenize(comentario.lower())\n",
-    "    vectores_comentario = [getVector(vectores, word) for word in words]\n",
-    "    return np.average(vectores_comentario)            "
+    "    comment_words = nltk.wordpunct_tokenize(comentario.lower())       \n",
+    "    vectores_comentario = [getVector(vectores, word) for word in comment_words] \n",
+    "            \n",
+    "    if (len(vectores_comentario) == 0):\n",
+    "        return np.zeros(totalColumnsVectors)\n",
+    "    \n",
+    "    return np.mean(vectores_comentario, axis=0)"
    ]
   },
   {
@@ -524,11 +530,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def data2Xy_vec(vec, data):\n",
+    "def data2Xy_vec(vec, data):        \n",
     "    X = [txt2vec(vec, comentario) for (comentario, etiqueta) in data]\n",
     "    y = [etiqueta for (comentario, etiqueta) in data]\n",
-    "    return X, y\n",
-    "    "
+    "    return X, y"
    ]
   },
   {
@@ -545,15 +550,14 @@
    "outputs": [],
    "source": [
     "def similitud_centroides(c1, c2):\n",
-    "    centroides_palabras_c1 = data2Xy_vec(vectors, c1)\n",
-    "    centroides_palabras_c2 = data2Xy_vec(vectors, c2)\n",
-    "    similarity(centroides_palabras_c1, centroides_palabras_c2)\n",
+    "    centroides_palabras_c1 = txt2vec(vectors, c1)\n",
+    "    centroides_palabras_c2 = txt2vec(vectors, c2)\n",
+    "    \n",
+    "    return similarity(centroides_palabras_c1, centroides_palabras_c2)\n",
     "\n",
-    "for c1,c2 in lista_comentarios:\n",
-    "    print(c1, c2, similitud_centroides(c1, c2))\n",
-    "\n",
-    "for c1,c2 in lista_comentarios_estudiantes:\n",
-    "    print(c1, c2, similitud_centroides(c1, c2))\n"
+    "for c1,c2 in lista_comentarios + lista_comentarios_estudiante:    \n",
+    "    similitud_par_comentarios = similitud_centroides(c1, c2)\n",
+    "    print(\"La similitud entre '{}' y '{}' es {}.\".format(c1, c2, similitud_par_comentarios))"
    ]
   },
   {
@@ -619,7 +623,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_centroide_train,y_centroide_train = data2Xy_vec(vectors, train)\n",
+    "\n",
+    "SVM_centroide = sklearn.svm.LinearSVC()\n",
+    "SVM_centroide.fit(X_centroide_train, y_centroide_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_centroide_val, y_centroide_val = data2Xy_vec(vectors, validation)\n",
+    "SVM_centroide.score(X_centroide_val, y_centroide_val)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -633,7 +652,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def printClassifierResult(classifier, X, y, modelText):\n",
+    "    predicted = classifier.predict(X)\n",
+    "    conf = sklearn.metrics.confusion_matrix(y, predicted)\n",
+    "    tp, tn, fp, fn = conf[1][1], conf[0][0], conf[0][1], conf[1][0]\n",
+    "    print(\"\\nPara el modelo de {} se obtiene lo siguiente:\".format(modelText))\n",
+    "    print(\"Hay {} verdaderos positivos, {} verdaderos negativos, {} falsos positivos, {} falsos negativos\".format(tp, tn, fp, fn))\n",
+    "    precision = tp / (tp + fp)\n",
+    "    recall = tp / (tp + fn)\n",
+    "    f1Score = 2 * precision * recall / (precision + recall)\n",
+    "    print(\"Precision: {}, recall: {}, Fscore: {}\".format(precision, recall, f1Score))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "printClassifierResult(SVM_centroide, X_centroide_val, y_centroide_val, \"SVM con Centroides\")\n",
+    "printClassifierResult(clf, Xval, yval, \"SVM con Bag of Words\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -667,7 +707,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.neural_network import MLPClassifier\n",
+    "NN_centroide = MLPClassifier(solver='adam', alpha=1e-10, batch_size=500, max_iter=500, learning_rate='adaptive', hidden_layer_sizes=(5, 2), shuffle=False, activation='identity', tol=1e-4)\n",
+    "NN_centroide.fit(X_centroide_train, y_centroide_train)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -682,7 +726,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clfNN.score(Xval, yval)"
+    "printClassifierResult(NN_centroide, X_centroide_val, y_centroide_val, \"Feed Forward Neural Network con Centroides\")\n",
+    "printClassifierResult(clfNN, Xval, yval, \"Feed Forward Neural Network con Bag of Words\")"
    ]
   },
   {
@@ -745,8 +790,12 @@
    "outputs": [],
    "source": [
     "Xtest, ytest = data2Xy_bow(transf_with_stem, test)\n",
+    "X_centroide_test,y_centroide_test = data2Xy_vec(vectors, test)\n",
+    "\n",
     "print(\"SVM bow tiene accuracy {} para el conjunto de test\".format(clf.score(Xtest, ytest)))\n",
-    "print(\"FF NN bow tiene accuracy {} para el conjunto de test\".format(clfNN.score(Xtest, ytest)))\n"
+    "print(\"FF NN bow tiene accuracy {} para el conjunto de test\".format(clfNN.score(Xtest, ytest)))\n",
+    "print(\"SVM centroide tiene accuracy {} para el conjunto de test\".format(SVM_centroide.score(X_centroide_test, y_centroide_test)))\n",
+    "print(\"FF NN centroide tiene accuracy {} para el conjunto de test\".format(NN_centroide.score(X_centroide_test, y_centroide_test)))\n"
    ]
   },
   {
@@ -764,15 +813,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predicted = clfNN.predict(Xtest)\n",
-    "conf = sklearn.metrics.confusion_matrix(ytest, predicted)\n",
-    "tp, tn, fp, fn = conf[1][1], conf[0][0], conf[0][1], conf[1][0]\n",
-    "print(\"Seleccionando el modelo de Feed Forward Neural Network con Bag of Words se obtiene lo siguiente:\")\n",
-    "print(\"Hay {} verdaderos positivos, {} verdaderos negativos, {} falsos positivos, {} falsos negativos\".format(tp, tn, fp, fn))\n",
-    "precision = tp / (tp + fp)\n",
-    "recall = tp / (tp + fn)\n",
-    "f1Score = 2 * precision * recall / (precision + recall)\n",
-    "print(\"Precision: {}, recall: {}, Fscore: {}\".format(precision, recall, f1Score))"
+    "printClassifierResult(clfNN, Xtest, ytest, \"Feed Forward Neural Network con Bag of Words\")"
    ]
   },
   {
@@ -787,7 +828,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "predicted = clfNN.predict(Xtest)\n",
+    "\n",
+    "print(\"######### Falsos positivos #########\\n\")\n",
+    "\n",
+    "# falsos positivos\n",
+    "total_fp_printed = 0\n",
+    "for i in range(len(predicted)):\n",
+    "    if predicted[i] == 'POS' and predicted[i] != ytest[i]:\n",
+    "        print(test[i])\n",
+    "        total_fp_printed += 1\n",
+    "    if total_fp_printed == 10: \n",
+    "        break;\n",
+    "        \n",
+    "print(\"\\n######### Falsos negativos #########\\n\")\n",
+    "\n",
+    "# falsos negativos\n",
+    "total_fn_printed = 0\n",
+    "for i in range(len(predicted)):\n",
+    "    if predicted[i] == 'NEG' and predicted[i] != ytest[i]:\n",
+    "        print(test[i])\n",
+    "        total_fn_printed += 1\n",
+    "    if total_fn_printed == 10: \n",
+    "        break;"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -812,7 +877,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "comentarios = [y for x in ([c1, c2] for c1,c2 in lista_comentarios + lista_comentarios_estudiante) for y in x]\n",
+    "\n",
+    "for comentario in comentarios:\n",
+    "    X_comment = transf_with_stem.transform([comentario])\n",
+    "    print(\"'{}' fue clasificado como '{}'\".format(comentario, clfNN.predict(X_comment)[0]))"
+   ]
   }
  ],
  "metadata": {
@@ -831,7 +902,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
