--- a/lab2/IntroPLN2018_lab_entrega2.ipynb
+++ b/lab2/IntroPLN2018_lab_entrega2.ipynb
@@ -314,6 +314,8 @@
     "        hasVectorNot.add(word)\n",
     "    hasVector.add(word)\n",
     "\n",
+    "print(\"Hay \", len(hasVector), \" palabras que tienen un vector asociado\")\n",
+    "print(\"Hay \", len(hasVectorNot), \" palabras que NO tienen un vector asociado\")\n",
     "for word in enumerate(list(hasVectorNot)):\n",
     "    print(word[1])\n",
     "    if (word[0] == 20): break;\n",
@@ -882,8 +884,19 @@
     "\n",
     "for comentario in comentarios:\n",
     "    X_comment = transf_with_stem.transform([comentario])\n",
-    "    print(\"'{}' fue clasificado como '{}'\".format(comentario, clfNN.predict(X_comment)[0]))"
+    "    X_centroide = txt2vec(vectors, comentario)\n",
+    "    print()\n",
+    "    print(\"'{}' fue clasificado como: \\n'{}', '{}', '{}', '{}' \\npara BOW con NN, BOW con SVM, centroide de vectores con NN y centroide de vectores con SVM respectivamente\".format(comentario, clfNN.predict(X_comment)[0], clf.predict(X_comment)[0], NN_centroide.predict([X_centroide])[0], SVM_centroide.predict([X_centroide])[0]))\n",
+    "    \n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -902,7 +915,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
