--- a/lab2/IntroPLN2018_lab_entrega2.ipynb
+++ b/lab2/IntroPLN2018_lab_entrega2.ipynb
@@ -631,7 +631,9 @@
    "source": [
     "X,y = data2Xy_bow(transf_with_stem, train)\n",
     "clf = sklearn.svm.SVC(kernel='linear',shrinking=False)\n",
-    "clf.fit(X, y)"
+    "ti = time.time()\n",
+    "clf.fit(X, y)\n",
+    "imprimir_tiempo(ti)"
    ]
   },
   {
@@ -641,7 +643,9 @@
    "outputs": [],
    "source": [
     "Xval, yval = data2Xy_bow(transf_with_stem, validation)\n",
-    "clf.score(Xval, yval)"
+    "ti = time.time()\n",
+    "print(clf.score(Xval, yval))\n",
+    "imprimir_tiempo(ti)"
    ]
   },
   {
@@ -653,7 +657,9 @@
     "X_centroide_train,y_centroide_train = data2Xy_vec(vectors, train)\n",
     "\n",
     "SVM_centroide = sklearn.svm.LinearSVC()\n",
-    "SVM_centroide.fit(X_centroide_train, y_centroide_train)"
+    "ti = time.time()\n",
+    "SVM_centroide.fit(X_centroide_train, y_centroide_train)\n",
+    "imprimir_tiempo(ti)"
    ]
   },
   {
@@ -663,7 +669,9 @@
    "outputs": [],
    "source": [
     "X_centroide_val, y_centroide_val = data2Xy_vec(vectors, validation)\n",
-    "SVM_centroide.score(X_centroide_val, y_centroide_val)"
+    "ti = time.time()\n",
+    "print(SVM_centroide.score(X_centroide_val, y_centroide_val))\n",
+    "imprimir_tiempo(ti)"
    ]
   },
   {
@@ -725,7 +733,12 @@
    "source": [
     "from sklearn.neural_network import MLPClassifier\n",
     "clfNN = MLPClassifier(solver='adam', alpha=1e-5, batch_size=500, max_iter=500, learning_rate='adaptive', hidden_layer_sizes=(5, 2), shuffle=False, activation='identity', tol=1e-4)\n",
-    "clfNN.fit(X,y)\n"
+    "ti = time.time()\n",
+    "clfNN.fit(X,y)\n",
+    "imprimir_tiempo(ti)\n",
+    "ti = time.time()\n",
+    "print(clfNN.score(Xval,yval))\n",
+    "imprimir_tiempo(ti)"
    ]
   },
   {
@@ -736,7 +749,13 @@
    "source": [
     "from sklearn.neural_network import MLPClassifier\n",
     "NN_centroide = MLPClassifier(solver='adam', alpha=1e-10, batch_size=500, max_iter=500, learning_rate='adaptive', hidden_layer_sizes=(5, 2), shuffle=False, activation='identity', tol=1e-4)\n",
-    "NN_centroide.fit(X_centroide_train, y_centroide_train)"
+    "ti = time.time()\n",
+    "NN_centroide.fit(X_centroide_train, y_centroide_train)\n",
+    "imprimir_tiempo(ti)\n",
+    "\n",
+    "ti = time.time()\n",
+    "print(NN_centroide.score(X_centroide_val, y_centroide_val))\n",
+    "imprimir_tiempo(ti)"
    ]
   },
   {
