ajusta hiperparametro C para svm con centroides

--- a/lab2/IntroPLN2018_lab_entrega2.ipynb
+++ b/lab2/IntroPLN2018_lab_entrega2.ipynb
@@ -656,7 +656,7 @@
    "source": [
     "X_centroide_train,y_centroide_train = data2Xy_vec(vectors, train)\n",
     "\n",
-    "SVM_centroide = sklearn.svm.LinearSVC()\n",
+    "SVM_centroide = sklearn.svm.LinearSVC(C=22)\n",
     "ti = time.time()\n",
     "SVM_centroide.fit(X_centroide_train, y_centroide_train)\n",
     "imprimir_tiempo(ti)"
@@ -958,7 +958,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
