Comparacion de similitud

--- a/lab2/IntroPLN2018_lab_entrega2.ipynb
+++ b/lab2/IntroPLN2018_lab_entrega2.ipynb
@@ -259,7 +259,9 @@
     "for pair in pares_estudiante:\n",
     "    vector0 = getVector(vectors, pair[0])\n",
     "    vector1 = getVector(vectors, pair[1])\n",
-    "    print(\"La similitud entre '{}' y '{}' es {}.\".format(pair[0], pair[1], similarity(vector0, vector1)))"
+    "    print(\"La similitud entre '{}' y '{}' es {}.\".format(pair[0], pair[1], similarity(vector0, vector1)))\n",
+    "    \n",
+    "print(\"\\nEl vector correspondiente a una palabra que no se encuentre en el repertorio de vectores es: \\n\", getVector(vectors, 'palabrafueradelrepertorio'))"
    ]
   },
   {
@@ -303,7 +305,7 @@
     "    for word in tokenizedComment:\n",
     "        vocabulario.add(word)\n",
     "\n",
-    "print(len(vocabulario))\n"
+    "print(\"El vocabulario tiene \" + str(len(vocabulario)) + \" palabras.\")\n"
    ]
   },
   {
@@ -434,7 +436,7 @@
     "\n",
     "# COMPLETE A PARTIR DE AQUI\n",
     "bow = transf_with_stem.transform([oracion_ej])\n",
-    "print(bow)\n",
+    "print(\"La representación de la oración es: \" + str(bow))\n",
     "diccionario_with_stem = transf_with_stem.get_feature_names()\n",
     "print(\"La bolsa de palabras tiene \" + str(len(diccionario_with_stem)) + \" palabras.\")\n",
     "#print(vectores_with_stem)"
@@ -594,10 +596,8 @@
     "\n",
     "**Respuesta:**\n",
     "\n",
-    "COMPLETAR CON LA RESPUESTA\n",
-    "\n",
-    "\n",
-    "."
+    "En general las similitudes obtenidas con bolsa de palabras son más bajas debido a que solo se miran palabras cuya raíz coincida con la raíz de palabras en el otro comentario, y no necesariamente la similitud (semántica) de dos comentarios implica que se compartan palabras, e incluso comentarios relativamente parecidos dan una similitud de 0.\n",
+    "En cambio con centroide de vectores se logra detectar similitudes semánticas más allá de tener o no las mismas palabras, pero a su vez puede suceder que oraciones muy diferentes tengan centroides muy cercanos entre sí debido a meras casualidades que pudieron ocurrir en el corpus con el que se construyeron los vectores."
    ]
   },
   {
@@ -644,7 +644,7 @@
    "source": [
     "Xval, yval = data2Xy_bow(transf_with_stem, validation)\n",
     "ti = time.time()\n",
-    "print(clf.score(Xval, yval))\n",
+    "print(\"Accuracy: \" + str(clf.score(Xval, yval)))\n",
     "imprimir_tiempo(ti)"
    ]
   },
@@ -670,7 +670,7 @@
    "source": [
     "X_centroide_val, y_centroide_val = data2Xy_vec(vectors, validation)\n",
     "ti = time.time()\n",
-    "print(SVM_centroide.score(X_centroide_val, y_centroide_val))\n",
+    "print(\"Accuracy: \" + str(SVM_centroide.score(X_centroide_val, y_centroide_val)))\n",
     "imprimir_tiempo(ti)"
    ]
   },
@@ -737,7 +737,7 @@
     "clfNN.fit(X,y)\n",
     "imprimir_tiempo(ti)\n",
     "ti = time.time()\n",
-    "print(clfNN.score(Xval,yval))\n",
+    "print(\"Accuracy: \" + str(clfNN.score(Xval,yval)))\n",
     "imprimir_tiempo(ti)"
    ]
   },
@@ -754,7 +754,7 @@
     "imprimir_tiempo(ti)\n",
     "\n",
     "ti = time.time()\n",
-    "print(NN_centroide.score(X_centroide_val, y_centroide_val))\n",
+    "print(\"Accuracy: \" + str(NN_centroide.score(X_centroide_val, y_centroide_val)))\n",
     "imprimir_tiempo(ti)"
    ]
   },
@@ -958,7 +958,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
