Comentarios sobre SVM y comparación entre SVM y MLP

--- a/lab2/IntroPLN2018_lab_entrega2.ipynb
+++ b/lab2/IntroPLN2018_lab_entrega2.ipynb
@@ -340,8 +340,6 @@
     "print(\"Cantidad de palabras que tienen un vector asociado: {}\".format(len(hasVector)))\n",
     "print(\"Cantidad de palabras que NO tienen un vector asociado: {}\\n\".format(len(hasVectorNot)))\n",
     "\n",
-    "print(\"Hay \", len(hasVector), \" palabras que tienen un vector asociado\")\n",
-    "print(\"Hay \", len(hasVectorNot), \" palabras que NO tienen un vector asociado\")\n",
     "for word in enumerate(list(hasVectorNot)):\n",
     "    print(word[1])\n",
     "    if (word[0] == 40): break;\n",
@@ -357,7 +355,7 @@
     "\n",
     "**Respuesta:**\n",
     "\n",
-    "Las 20 palabras impresas son en su mayoría palabras que tienen errores ortográficos o \"typos\" (abreviatura de _typographical error_ en español \"error tipográfico\"). Otras palabras que también aparecen en el muestreo son emoticones (:$), algunas puntuaciones \"extrañas\" ('...!', ',,,,' y '!!....') y palabras que son escritas haciendo énfasis en algun aspecto (como 'leeeejos' o 'cristianooooo') , como también algunas que, aunque no son tan raras, simplemente pueden no aparecen en el corpus de entrenamiento (como 'defruadaron' o 'porcioncitas') o son contracciones de una palabra con otra (como 'reamable' 0 'superfresaca'). También aparece una palabra que es una castellanización de otro idioma (como 'harumaki').\n",
+    "Las 20 palabras impresas son en su mayoría palabras que tienen errores ortográficos o \"typos\" (abreviatura de _typographical error_ en español \"error tipográfico\"). Otras palabras que también aparecen en el muestreo son emoticones (en otras iteraciones se imprimió el emoticon ':$', el cual no aparece en el caso presentado ya que el orden de las palabras en el set es aleatorio), algunas puntuaciones \"extrañas\" (',....', '?\" o ') y palabras que son escritas haciendo énfasis en algun aspecto (como 'tiernisimos' o 'morcillitas') , como también algunas que, aunque no son tan raras, simplemente pueden no aparecen en el corpus de entrenamiento (como 'defruadaron' o 'porcioncitas') o son contracciones de una palabra con otra (como 'reamable' 0 'superfresaca'). También aparece una palabra que es una castellanización de otro idioma (como 'trabalhados').\n",
     "\n",
     "Esto es un suceso común, ya que los comentarios son escritos por personas de todo estrato social y edad, lo que lleva a que se encuentren palabras con faltas ortográficas o \"raras\". Además, es común que varias letras se intercambien por otras cuando se escribe en el teclado (\"typo\").\n",
     "También se debe considerar que los lenguajes se encuentran en constante evolución, y que dependiendo de los diferentes tiempos de donde se comparen texto, se pueden encontrar palabras que no existían en el espacio temporal de uno pero si en otro."
@@ -630,9 +628,10 @@
    "outputs": [],
    "source": [
     "X,y = data2Xy_bow(transf_with_stem, train)\n",
-    "clf = sklearn.svm.SVC(kernel='linear',shrinking=False)\n",
+    "clf = sklearn.svm.LinearSVC(C=22, max_iter=100000)\n",
     "ti = time.time()\n",
     "clf.fit(X, y)\n",
+    "print(\"Tiempo de entrenamiento: \\n\")\n",
     "imprimir_tiempo(ti)"
    ]
   },
@@ -645,6 +644,7 @@
     "Xval, yval = data2Xy_bow(transf_with_stem, validation)\n",
     "ti = time.time()\n",
     "print(\"Accuracy: \" + str(clf.score(Xval, yval)))\n",
+    "print(\"Tiempo de validación: \\n\")\n",
     "imprimir_tiempo(ti)"
    ]
   },
@@ -656,9 +656,10 @@
    "source": [
     "X_centroide_train,y_centroide_train = data2Xy_vec(vectors, train)\n",
     "\n",
-    "SVM_centroide = sklearn.svm.LinearSVC(C=22)\n",
+    "SVM_centroide = sklearn.svm.LinearSVC(C=22, max_iter=10000)\n",
     "ti = time.time()\n",
     "SVM_centroide.fit(X_centroide_train, y_centroide_train)\n",
+    "print(\"Tiempo de entrenamiento: \\n\")\n",
     "imprimir_tiempo(ti)"
    ]
   },
@@ -671,6 +672,7 @@
     "X_centroide_val, y_centroide_val = data2Xy_vec(vectors, validation)\n",
     "ti = time.time()\n",
     "print(\"Accuracy: \" + str(SVM_centroide.score(X_centroide_val, y_centroide_val)))\n",
+    "print(\"Tiempo de validación: \\n\")\n",
     "imprimir_tiempo(ti)"
    ]
   },
@@ -705,8 +707,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "printClassifierResult(SVM_centroide, X_centroide_val, y_centroide_val, \"SVM con Centroides\")\n",
-    "printClassifierResult(clf, Xval, yval, \"SVM con Bag of Words\")"
+    "printClassifierResult(clf, Xval, yval, \"SVM con Bag of Words\")\n",
+    "printClassifierResult(SVM_centroide, X_centroide_val, y_centroide_val, \"SVM con Centroides\")"
    ]
   },
   {
@@ -735,9 +737,12 @@
     "clfNN = MLPClassifier(solver='adam', alpha=1e-5, batch_size=500, max_iter=500, learning_rate='adaptive', hidden_layer_sizes=(5, 2), shuffle=False, activation='identity', tol=1e-4)\n",
     "ti = time.time()\n",
     "clfNN.fit(X,y)\n",
+    "print(\"Tiempo de entrenamiento: \\n\")\n",
     "imprimir_tiempo(ti)\n",
+    "\n",
     "ti = time.time()\n",
     "print(\"Accuracy: \" + str(clfNN.score(Xval,yval)))\n",
+    "print(\"Tiempo de validación: \\n\")\n",
     "imprimir_tiempo(ti)"
    ]
   },
@@ -751,10 +756,12 @@
     "NN_centroide = MLPClassifier(solver='adam', alpha=1e-10, batch_size=500, max_iter=500, learning_rate='adaptive', hidden_layer_sizes=(5, 2), shuffle=False, activation='identity', tol=1e-4)\n",
     "ti = time.time()\n",
     "NN_centroide.fit(X_centroide_train, y_centroide_train)\n",
+    "print(\"Tiempo de entrenamiento: \\n\")\n",
     "imprimir_tiempo(ti)\n",
     "\n",
     "ti = time.time()\n",
     "print(\"Accuracy: \" + str(NN_centroide.score(X_centroide_val, y_centroide_val)))\n",
+    "print(\"Tiempo de validación: \\n\")\n",
     "imprimir_tiempo(ti)"
    ]
   },
@@ -771,8 +778,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "printClassifierResult(NN_centroide, X_centroide_val, y_centroide_val, \"Feed Forward Neural Network con Centroides\")\n",
-    "printClassifierResult(clfNN, Xval, yval, \"Feed Forward Neural Network con Bag of Words\")"
+    "printClassifierResult(clfNN, Xval, yval, \"Feed Forward Neural Network con Bag of Words\")\n",
+    "printClassifierResult(NN_centroide, X_centroide_val, y_centroide_val, \"Feed Forward Neural Network con Centroides\")"
    ]
   },
   {
@@ -792,12 +799,30 @@
     "\n",
     "Realice los comentarios que considere adecuados respecto a la comparación y resultados obtenidos. Si lo desea puede agregar bloques de código que muestren resultados adicionales.\n",
     "\n",
-    "**Respuesta:**\n",
+    "**Respuesta:** \n",
+    "###### SVM:\n",
     "\n",
-    "COMPLETAR CON LA RESPUESTA\n",
+    "En el caso de SVM, se probaron dos implementaciones del clasificador: SVM lineal sin shrinking y SVM lineal con penalización. En cuanto a la comparación entre resultados obtenidos, son similares en las dos implementaciones. En relación a la performance, la segunda resulta demorar menos. Esto deviene en que la técnica de shrinking es utilizada para ahorrar tiempo reduciendo las dimensiones del problema, por lo que es previsible que al desactivarlo demore más tanto para entrenar el modelo como para realizar predicciones.\n",
     "\n",
+    "Respecto a la comparación entre los resultados obtenidos para las dos representaciones, si tomamos el valor F (_Fscore_) como medida de correctitud general, se ve que el clasificador SVM con representación de centroide mejora levemente al clasificador SVM con representación de bolsa de palabras. Esto puede deberse a que la representación de centroides recoge aspectos estadísticos a un nivel más global que el caso de bag of words.\n",
+    "El otro aspecto a evaluar es que se percibe una mejora significativa en el tiempo de entrenamiento y validación para el caso en que se utiliza la representación de centroides. Esto sucede ya que los vectores de dicha representación tienen una menor cantidad de features que los que se obtienen utilizando la representación de bolsa de palabras (300 en representación de centroides, 486 en bolsa de palabras).\n",
     "\n",
-    ".\n"
+    "###### SVM vs. MLP:\n",
+    "\n",
+    "Para la siguiente comparación, se considerara la implementación de SVM con penalización.\n",
+    "\n",
+    "El primer factor que salta a la vista es la diferencia de performance. El clasificador que utiliza la red neuronal posee una amplia mejora (tanto en tiempo de entrenamiento como de validación) con respecto al clasificador que utiliza SVM.\n",
+    "\n",
+    "Prosiguiendo con los resultados en la validación se puede ver que en el caso del clasificador MLP, presenta un valor F apenas mayor que el clasificador SVM. Yendo a los resultados más concretos, el clasificador MLP obtiene mejores resultados con respecto a la cantidad de ejemplos clasificados correctamente. En relación a los ejemplos clasificados incorrectamente, se obtienen resultados mixtos: el clasificador NN obtiene empeora la cantidad de falsos positivos cuando se utiliza la representación de centroides, pero reduce la cantidad de falsos negativos. Para el caso de la representación de comentarios con bolsa de palabras, se observa el mismo resultado pero intercambiando los papeles.\n",
+    "\n",
+    "Podemos concluir entonces que, para el corpus de comentarios, aunque los dos clasificadores arrojan resultados similares para ambas representaciones de comentarios, el clasificador NN presenta una mejora en cuanto a tiempo computacional que puede inclinar la balanza a su favor."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Variante de SVM utilizando clasificación lineal sin penalización**"
    ]
   },
   {
@@ -805,7 +830,83 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X,y = data2Xy_bow(transf_with_stem, train)\n",
+    "clf2 = sklearn.svm.SVC(kernel='linear',shrinking=False)\n",
+    "ti = time.time()\n",
+    "clf2.fit(X, y)\n",
+    "print(\"Tiempo de entrenamiento: \\n\")\n",
+    "imprimir_tiempo(ti)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Xval, yval = data2Xy_bow(transf_with_stem, validation)\n",
+    "ti = time.time()\n",
+    "print(\"Accuracy: \" + str(clf2.score(Xval, yval)))\n",
+    "print(\"Tiempo de validación: \\n\")\n",
+    "imprimir_tiempo(ti)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_centroide_train,y_centroide_train = data2Xy_vec(vectors, train)\n",
+    "\n",
+    "SVM_centroide2 = sklearn.svm.SVC(kernel='linear',shrinking=False)\n",
+    "ti = time.time()\n",
+    "SVM_centroide2.fit(X_centroide_train, y_centroide_train)\n",
+    "print(\"Tiempo de entrenamiento: \\n\")\n",
+    "imprimir_tiempo(ti)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_centroide_val, y_centroide_val = data2Xy_vec(vectors, validation)\n",
+    "ti = time.time()\n",
+    "print(\"Accuracy: \" + str(SVM_centroide2.score(X_centroide_val, y_centroide_val)))\n",
+    "print(\"Tiempo de validación: \\n\")\n",
+    "imprimir_tiempo(ti)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def printClassifierResult(classifier, X, y, modelText):\n",
+    "    predicted = classifier.predict(X)\n",
+    "    conf = sklearn.metrics.confusion_matrix(y, predicted)\n",
+    "    tp, tn, fp, fn = conf[1][1], conf[0][0], conf[0][1], conf[1][0]\n",
+    "    print(\"\\nPara el modelo de {} se obtiene lo siguiente:\".format(modelText))\n",
+    "    print(\"Hay {} verdaderos positivos, {} verdaderos negativos, {} falsos positivos, {} falsos negativos\".format(tp, tn, fp, fn))\n",
+    "    precision = tp / (tp + fp)\n",
+    "    recall = tp / (tp + fn)\n",
+    "    f1Score = 2 * precision * recall / (precision + recall)\n",
+    "    print(\"Precision: {}, recall: {}, Fscore: {}\".format(precision, recall, f1Score))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "printClassifierResult(SVM_centroide2, X_centroide_val, y_centroide_val, \"SVM con Centroides\")\n",
+    "printClassifierResult(clf, Xval, yval, \"SVM con Bag of Words\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -933,13 +1034,6 @@
     "    \n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -958,7 +1052,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
